add ao tests