@@ -5,6 +5,8 @@ import JAO.tests.utility.DebugEntry;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 
 import static java.nio.file.StandardOpenOption.APPEND;
 import static java.nio.file.StandardOpenOption.CREATE;
@@ -19,17 +21,19 @@ public class SingleTest {
     }
 
     public void runTest(int seconds)  {
-
-
-
+        AOTest aoTest = new AOTest(this.parameters);
+        System.out.println("Starting test...");
+        resultsAO = aoTest.runTest(5);
+        try {
+            Thread.sleep(50);
+        } catch (InterruptedException ex) {
+            ex.printStackTrace();
+        }
+        System.out.println("Finished test.");
     }
 
     private void write(final String filename, final String s) throws IOException {
-        Files.writeString(
-                Path.of(System.getProperty("java.io.tmpdir"), filename),
-                s + System.lineSeparator(),
-                CREATE, APPEND
-        );
+        Files.write(Paths.get(filename), (s + "\n").getBytes(), APPEND, CREATE);
     }
 
     public void appendResultToFile(final String filename) {
@@ -37,7 +41,9 @@ public class SingleTest {
 
         while(true) {
             try {
+                System.out.println("Saving test...");
                 write(filename, resultString);
+                System.out.println("Test saved.");
                 break;
             } catch (IOException e) {
                 e.printStackTrace();
